--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,14 @@ requires-python = ">=3.11"
 
 dependencies = [
     "langchain",
+    "Langgraph",
     "langchain-openai",
     "langchain-community",
+    "langchain-classic",
+    "langchain-chroma",
+    "chromadb",
     "python-dotenv",
     "streamlit",
-    "langchain-classic",
     "pydantic",
-    "pyPDF2"
+    "pyPDF2",
 ]
